--- a/main.html
+++ b/main.html
@@ -6,7 +6,30 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body bg color="yellow">
+		<table border="2" bgcolor="yellow">
+		<thead>
+			<tr>
+				<td><h1><b>NAME<b><h1></td>
+				<td><h1><b>AGE<b><h1></td>
+				<td><h1><b>BRANCH<b><h1></td>
+			</tr>
+			<thead>
+				<tbody>
+				<tr>
+					<td><h2>Shaw<h2></td>
+					<td><h2>20<h2></td>
+					<td><h2>CSE<h2></td>
+				</tr>
+					<tr>
+						<td><h2>Adil</h2></td>
+						<td><h2>21</h2></td>
+						<td><h2>ECE</h2></td>
+						</tr>
+				</tbody>
+	</table>
+							
+					
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
