--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body bg color="yellow">
+<body>
 		<table border="2" bgcolor="yellow">
 		<thead>
 			<tr>
