--- a/main.html
+++ b/main.html
@@ -5,9 +5,9 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-		<table border="2" bgcolor="yellow">
+	<h1><center>Student Details<center></h1>
+		<table border="2" bgcolor="yellow" align="center">
 		<thead>
 			<tr>
 				<td><h1><b>NAME<b><h1></td>
