--- a/main.html
+++ b/main.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h1><center>Student Details<center></h1>
+<!-- 	<h1><center>Student Details<center></h1> -->
 		<table border="2" bgcolor="yellow" align="center">
+			<h1><CENTER>Student Details</CENTER></H1>
 		<thead>
 			<tr>
 				<td><h1><b>NAME<b><h1></td>
