--- a/main.html
+++ b/main.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <!-- 	<h1><center>Student Details<center></h1> -->
-		<table border="2" bgcolor="yellow" align="center">
+		<table  border="1px solid black" bgcolor="yellow" align="center" >
 			<h1><CENTER>Student Details</CENTER></H1>
 		<thead>
 			<tr>
-				<td><h1><b>NAME<b><h1></td>
-				<td><h1><b>AGE<b><h1></td>
-				<td><h1><b>BRANCH<b><h1></td>
+				<td><b>NAME<b></td>
+				<td><b>AGE<b></td>
+				<td><b>BRANCH<b></td>
 			</tr>
 			<thead>
 				<tbody>
