--- a/main.html
+++ b/main.html
@@ -11,16 +11,16 @@
 			<h1><CENTER>Student Details</CENTER></H1>
 		<thead>
 			<tr>
-				<td><b>NAME<b></td>
-				<td><b>AGE<b></td>
-				<td><b>BRANCH<b></td>
+				<td><h2><b>NAME<b></h2></td>
+				<td><h2><b>AGE<b></h2></td>
+				<td><h2><b>BRANCH<b></h2></td>
 			</tr>
 			<thead>
 				<tbody>
 				<tr>
-					<td><h2>Shaw<h2></td>
-					<td><h2>20<h2></td>
-					<td><h2>CSE<h2></td>
+					<td><h2>Shaw</h2></td>
+					<td><h2>20</h2></td>
+					<td><h2>CSE</h2></td>
 				</tr>
 					<tr>
 						<td><h2>Adil</h2></td>
