--- a/main.html
+++ b/main.html
@@ -3,11 +3,12 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	
 </head>
+	<link rel="stylesheet" href="styles.css">
 <body>
 <!-- 	<h1><center>Student Details<center></h1> -->
-		<table  border="1px solid black" bgcolor="yellow" align="center" >
+		<table  border="2" bgcolor="yellow" align="center" >
 			<h1><CENTER>Student Details</CENTER></H1>
 		<thead>
 			<tr>
