--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="styles.css">
 <body>
 <!-- 	<h1><center>Student Details<center></h1> -->
-		<table  border="2" bgcolor="yellow" align="center" >
+		<table  border="2" bgcolor="yellow" align="center" border="1px solid black">
+<!-- 			<style=border:1px black> -->
 			<h1><CENTER>Student Details</CENTER></H1>
 		<thead>
 			<tr>
