--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles.css">
 <body>
 <!-- 	<h1><center>Student Details<center></h1> -->
-		<table  border="2" bgcolor="yellow" align="center" border="1px solid rgb(0, 0, 0)">
+		<table  bgcolor="yellow" align="center" border="1px solid rgb(0, 0, 0)">
 <!-- 			<style=border:1px black> -->
 			<h1><CENTER>Student Details</CENTER></H1>
 		<thead>
